--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,18 @@ h6 {
 
 .hero {
   height: 300px;
-  background-image: url('../images/hero.jpg');
+  /* background-image: url('../images/hero.jpg'); */
   background-color: #1b2127;
-  background-size: 500px 300px;
+  /* background-size: 500px 300px;
   background-repeat: no-repeat;
-  background-position-x: right;
+  background-position-x: right; */
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.hero-image {
+  object-fit: cover
 }
 
 .portfolio {
@@ -39,6 +44,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 3px 5px 33px #888888;
 }
 
 .project-course {
@@ -156,6 +162,7 @@ figure {
 
 .event-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .event-list-title {
@@ -169,6 +176,7 @@ figure {
   overflow: hidden;
   flex-shrink: 0;
   background-color: #f4fbff;
+  box-shadow: 3px 5px 33px #888888;
 }
 
 .event img {
@@ -196,4 +204,82 @@ figure {
   text-decoration: none;
   color: #056fff;
   border-radius: 5px;
+}
+
+.contact {
+  background-color: #056fff;
+  color: white;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.social {
+
+}
+
+.social-link {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin: 0 10px;
+}
+
+.social-link.twitter {
+  background-image: url('../images/twitter.svg');
+  background-size: 50px 50px;
+}
+
+.social-link.facebook {
+  background-image: url('../images/facebook.svg');
+  background-size: 50px 50px;
+}
+
+.social-link.github {
+  background-image: url('../images/github.svg');
+  background-size: 50px 50px;
+}
+
+.social-link.instagram {
+  background-image: url('../images/instagram.svg');
+  background-size: 50px 50px;
+}
+
+.form-email input{
+  border-color: grey;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px 20px 10px 25px;
+  background-image: url('../images/envelope.svg');
+  background-size: 15px 15px;
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: 5px;
+}
+
+.form-email button {
+  display: block;
+  margin-top: 10px;
+  background: transparent;
+  color: white;
+  padding: 10px 0;
+  border-radius: 5px;
+  width: 80px;
+  margin-top: 10px;
+  /* margin: 10px auto 0; */
+}
+
+.form-email h3 {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.container {
+  width: 1000px;
+  margin: 0 auto;
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  height: inherit;
+  flex-wrap: inherit;
 }
