--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .hero-image {
@@ -45,6 +46,7 @@ h6 {
   align-items: center;
   justify-content: space-between;
   box-shadow: 3px 5px 33px #888888;
+  flex-wrap: wrap;
 }
 
 .project-course {
@@ -76,6 +78,7 @@ h1 {
   letter-spacing: -.2;
   color: white;
   margin: 0;
+  max-width: 500px;
 }
 
 h1 strong {
@@ -106,6 +109,7 @@ h2 {
   justify-content: space-between;
   height: 90px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 ol,
@@ -150,6 +154,7 @@ figure {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer img {
@@ -213,6 +218,7 @@ figure {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .social {
@@ -275,7 +281,7 @@ figure {
 }
 
 .container {
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
@@ -284,4 +290,22 @@ figure {
   flex-wrap: inherit;
 }
 
-Were adding responsive
+/* If were doing desktop first, its better to start with the bigger media queries */
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    /* border: 10px solid green; */
+  }
+}
+
+@media screen and (max-width: 480px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
