--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,8 @@ figure {
 
 .container {
   max-width: 1000px;
+  /* width: 100%; */
+  flex: 1;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
@@ -296,9 +298,21 @@ figure {
 
 }
 
-@media screen and (max-width: 768px) {
-  body {
-    /* border: 10px solid green; */
+@media screen and (max-width: 767px) {
+  .header {
+    display: block;
+    height: auto;
+    text-align: center;
+  }
+
+  .header ol {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header ol li {
+    height: 50px;
+
   }
 }
 
