--- a/css/styles.css
+++ b/css/styles.css
@@ -95,11 +95,15 @@ h2 {
 }
 
 .project-details {
-  width: 500px;
+  width: 50%;
 }
 
 .project-imageContainer {
-  width: 500px;
+  width: 50%;
+}
+
+.project-image {
+  width: 100%
 }
 
 .header {
@@ -314,10 +318,51 @@ figure {
     height: 50px;
 
   }
+
+  .project {
+    display: block;
+  }
+
+  .project-imageContainer {
+    width: auto;
+  }
+
+  .project-details {
+    width: auto;
+    font-size: 16px;
+  }
+
+  .project-title {
+    font-size: 1.5em;
+    margin-bottom: .3em;
+  }
+
+  .project-course, .project-date, .project-url {
+    margin: .3em 0;
+  }
+
+  .project-url {
+    font-size: 1em;
+  }
+
+  .project-course,  {
+    font-size: 0.7em;
+  }
+
+  .project-date {
+    font-size: 1em;
+  }
+
+  .project-description {
+    font-size: 0.8em;
+  }
 }
 
-@media screen and (max-width: 480px) {
-
+@media screen and (max-width: 479px) {
+  .project-details {
+    width: auto;
+    font-size: 12px;
+  }
 }
 
 @media screen and (max-width: 320px) {
