--- a/css/styles.css
+++ b/css/styles.css
@@ -304,7 +304,9 @@ figure {
 }
 
 @media screen and (max-width: 1024px) {
-
+  .container {
+    padding: 0 1em;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -389,7 +391,52 @@ figure {
     margin: -2em .8em .8em .8em;
     padding: 1em;
   }
+
+  .contact {
+    height: auto;
+    padding: 1.5em 0;
+    display: block;
+    text-align: center;
+  }
+
+  .form-email button {
+    margin: 1em auto;
+  }
+
+  .form-email h3 {
+    margin-top: 0;
+  }
+
+  .footer {
+    display: block;
+    text-align: center;
+    border: 1px solid transparent;
+  }
 }
+
+@media screen and (max-width: 596px) {
+  .contact {
+    height: auto;
+    padding: 1.5em 0;
+    display: block;
+    text-align: center;
+  }
+
+  .form-email button {
+    margin: 1em auto;
+  }
+
+  .form-email h3 {
+    margin-top: 0;
+  }
+
+  .footer {
+    display: block;
+    text-align: center;
+    border: 1px solid transparent;
+  }
+}
+
 
 @media screen and (max-width: 320px) {
 
