--- a/css/styles.css
+++ b/css/styles.css
@@ -307,9 +307,32 @@ figure {
   .container {
     padding: 0 1em;
   }
+
+  .hero {
+    height: auto;
+    position: relative;
+    overflow: hidden;
+    padding: 2em;
+  }
+
+  .hero-image {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 2em;
+    z-index: 2;
+  }
 }
 
 @media screen and (max-width: 767px) {
+
   .header {
     display: block;
     height: auto;
@@ -382,6 +405,10 @@ figure {
 }
 
 @media screen and (max-width: 479px) {
+  h1 {
+    font-size: 1.5em;
+  }
+
   .project-details {
     width: auto;
     font-size: 12px;
@@ -440,5 +467,12 @@ figure {
 
 
 @media screen and (max-width: 320px) {
+  h1 {
+    font-size: 1.2em;
+  }
+
+  .hero {
+    padding: 2em 1em;
+  }
 
 }
