--- a/css/styles.css
+++ b/css/styles.css
@@ -302,6 +302,26 @@ figure {
   height: auto;
 }
 
+.youtube-video {
+  /* width: 100%;
+  height: auto; */
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.flexible-video {
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+  background-color: blue;
+  position: relative;
+}
+
 /* If were doing desktop first, its better to start with the bigger media queries */
 
 @media screen and (max-width: 1440px) {
