--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,21 @@ figure {
   position: relative;
 }
 
+.burger-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, .8);
+  display: none;
+  line-height: 40px;
+  text-align: center;
+  position: fixed;
+  z-index: 3;
+  left: 5px;
+  top: 5px;
+  color: white;
+}
+
 /* If were doing desktop first, its better to start with the bigger media queries */
 
 @media screen and (max-width: 1440px) {
@@ -387,6 +402,9 @@ figure {
 }
 
 @media screen and (max-width: 767px) {
+  .burger-button {
+    display: block;
+  }
 
   .header {
     display: block;
