--- a/css/styles.css
+++ b/css/styles.css
@@ -361,7 +361,7 @@ figure {
   line-height: 40px;
   text-align: center;
   position: fixed;
-  z-index: 3;
+  z-index: 4;
   left: 5px;
   top: 5px;
   color: white;
@@ -420,6 +420,26 @@ figure {
   .header ol li {
     height: 50px;
 
+  }
+
+  .header a {
+    font-size: 2em;
+    text-decoration: underline;
+    margin-bottom: .5em;
+  }
+
+  .menu {
+    position: fixed;
+    background: rgba(73, 62, 196, .9);
+    z-index: 3;
+    top: 0;
+    left: -100vw;
+    bottom: 0;
+    width: 100vw;
+    /* height: 100vh; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .project {
