--- a/css/styles.css
+++ b/css/styles.css
@@ -440,6 +440,11 @@ figure {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 0.5s;
+  }
+
+  .menu.is-active {
+    left: 0;
   }
 
   .project {
